Fixed address not showing up in the different headers.

--- a/wp-content/themes/123_parent/__build/_css/main.css
+++ b/wp-content/themes/123_parent/__build/_css/main.css
@@ -1111,7 +1111,6 @@ header.header .opt__topbanner {
     padding: 0 5%;
     display: flex;
     align-items: center;
-    justify-content: space-between;
   }
   header#opt_header_one > div:first-of-type .header-logo {
     height: 100%;
@@ -1120,10 +1119,14 @@ header.header .opt__topbanner {
   header#opt_header_one > div:first-of-type .header-logo img {
     max-height: 100%;
   }
+  header#opt_header_one > div:first-of-type > a:nth-of-type(2) {
+    margin-left: auto;
+  }
   header#opt_header_one > div:first-of-type .site__iconlink {
     color: #fff;
     display: flex;
     align-items: center;
+    height: 80px;
   }
   header#opt_header_one > div:first-of-type .site__iconlink-address:before,
 header#opt_header_one > div:first-of-type .site__iconlink-phone:before {
@@ -1132,9 +1135,6 @@ header#opt_header_one > div:first-of-type .site__iconlink-phone:before {
     border: 2px solid green;
     border-radius: 100%;
     color: green;
-  }
-  header#opt_header_one > div:first-of-type .site__iconlink-phone {
-    height: 80px;
   }
   header#opt_header_one > div:first-of-type .site__iconlink-phone:before {
     margin-left: 10px;
@@ -2003,7 +2003,7 @@ header#opt_header_nine > div:last-of-type > nav > ul > li > a:focus {
     justify-content: space-between;
     align-items: center;
     font-size: 18px;
-    height: 90px;
+    height: 95px;
   }
   header#opt_header_ten > div:first-of-type > a:first-of-type {
     z-index: 21;
