--- a/wp-content/themes/123_parent/__pre/_sass/partials/includes/_nav.1.scss
+++ b/wp-content/themes/123_parent/__pre/_sass/partials/includes/_nav.1.scss
@@ -13,7 +13,6 @@
         padding: 0 5%;
         display: flex;
         align-items: center;
-        justify-content: space-between;
         // Header logo
         .header-logo {
             height: 100%;
@@ -23,11 +22,16 @@
             }
         }
 
+        > a:nth-of-type(2) {
+            margin-left: auto;
+        }
+
         // Address and Phone number links
         .site__iconlink {
             color: $white;
             display: flex;
             align-items: center;
+            height: 80px;
         }
 
         // Address and Phone number links icons
@@ -38,11 +42,6 @@
             border: 2px solid $accent;
             border-radius: 100%;
             color: $accent;
-        }
-        
-        // Phone number link
-        .site__iconlink-phone {
-            height: 80px;
         }
 
         // Phone number icon
