--- a/wp-content/themes/123_parent/__pre/_sass/partials/includes/_nav.10.scss
+++ b/wp-content/themes/123_parent/__pre/_sass/partials/includes/_nav.10.scss
@@ -11,7 +11,7 @@
             justify-content: space-between;
             align-items: center;
             font-size: 18px;
-            height: 90px;
+            height: 95px;
             // Hamburger icon link
             > a:first-of-type {
                 z-index: 21;
